<?xml version="1.0"?>
<resources>
    <!--Interface-->
    <string name="size_setting">Size</string>
    <string name="overlay_toggle">Overlay</string>
    <string name="corner_color_string">Corner Color</string>
    <string name="advanced_toggle_title">More Settings</string>
    <string name="bottom_right_toggle">Bottom Right</string>
    <string name="top_right_toggle">Top Right</string>
    <string name="bottom_left_toggle">Bottom Left</string>
    <string name="top_left_toggle">Top Left</string>
    <string name="qs_tile_label">Toggle Overlay</string>
    <!--Notification-->
    <string name="notification_title">Corners Overlay</string>
    <string name="notification_text">Corners is overlaying. You might want to hide this notification by long pressing.</string>
    <!--Help-->
    <string name="menu_item_help">Help</string>
    <string name="help_custom_corner_text">To set custom sizes for each corner, long press on the corner under More Settings.</string>
    <string name="dialog_ok">OK</string>
    <!--About-->
    <string name="menu_item_about">About</string>
    <string name="about_version">Version</string>
    <string name="about_licences">Licenses</string>
    <string name="about_translations_title">Translators</string>
    <string name="about_translations_desc">Thanks to:</string>
    <!--Other-->
    <string name="permission_not_granted">Overlay permission not granted!</string>
    <string name="permission_service_sync_error_text">Corners: the overlay permission is not granted but you have the service turned on.
        Please either turn off the service or grant the permission</string>
    <!-- 
    <string name="accessibility_service_description">Allow Corners to overlay the lockscreen and notification bar, as well as detect the current app for app-by-app enabling</string>
-->
    <string name="notification_hide_title">Hide Notification</string>
    <string name="notification_hide_text">To ensure the service won\'t be killed when memory is low, a notification needs to be shown.
        However, you can hide the notification yourself, and the service still won\'t be killed.
        You can do this usually by long pressing on the notification and toggling the switch, or if that isn\'t available on your device, by going to the app\'s settings and toggling it from there.
    </string>
    <string name="individual_corners">Individual Corners</string>
    <string name="all_corners">All Corners</string>
    <string name="landscape_fix_title">Landscape Fix</string>
    <string name="landscape_fix_desc">On some devices, the overlay is misplaced when the device is rotated to landscape. If this is the case, you can toggle the checkbox, which should fix the issue</string>
    <string name="action_settings">Settings</string>
    <string name="help_custom_corner_title">Individual Sizes</string>
    <string name="help_notification_hide_text">To ensure the service won\'t be killed when memory is low, a notification needs to be shown. However, since this is the app\'s only notification, you can hide it and it will achieve the same effect as having none at all. You can do this by long pressing on the notification and toggling the switch. You can always reshow it by going to the app\'s settings. You can show this tutorial again in the overflow menu.</string>
    <string name="help_notification_hide_title">Hide Notification</string>
    <string name="notification_hide_kill">OK</string>
</resources>
