<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <TextView
        android:id="@+id/hideTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_hide_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/hideGif"
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/remove_notification" />

    <TextView
        android:id="@+id/hideText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/notification_hide_text" />

    <TextView
        android:id="@+id/customTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/individual_corners"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/customText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/help_custom_corner_text" />

</LinearLayout>