<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sizeBarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/size_setting"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <SeekBar
        android:id="@+id/sizeBar"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="48"
        android:paddingTop="16dp"
        android:paddingBottom="12dp"
        android:progress="12"
        app:layout_constraintEnd_toStartOf="@+id/currentVal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeBarTitle" />

    <TextView
        android:id="@+id/currentVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:text="12"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="@+id/sizeBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sizeBar"
        app:layout_constraintTop_toTopOf="@+id/sizeBar" />


    <Switch
        android:id="@+id/overlay_toggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="20dp"
        android:text="@string/overlay_toggle"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeBar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/individual_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overlay_toggle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/additionalholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/collapseToggleSpace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/collapseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:rotation="180"
                    android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewAdvancedToggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textViewAdvancedToggle" />

                <TextView
                    android:id="@+id/textViewAdvancedToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="12dp"
                    android:text="@string/advanced_toggle_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <CheckBox
                android:id="@+id/switchTopL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
                android:padding="8dp"
                android:text="@string/top_left_toggle"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/collapseToggleSpace" />

            <CheckBox
                android:id="@+id/switchBottomL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
                android:padding="8dp"
                android:text="@string/bottom_left_toggle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchTopL" />

            <CheckBox
                android:id="@+id/switchTopR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:padding="8dp"
                android:text="@string/top_right_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/switchTopL" />

            <CheckBox
                android:id="@+id/switchBottomR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:padding="8dp"
                android:text="@string/bottom_right_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchTopR" />

            <include
                android:id="@+id/allCornersColorLayout"
                layout="@layout/color_preview_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchBottomL" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>