<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/size_setting"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/seekbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="48"
            android:paddingTop="16dp"
            android:paddingBottom="12dp"
            android:progress="12"
            app:layout_constraintEnd_toStartOf="@id/currentVal"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/currentVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:text="12"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seekBar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Switch
        android:id="@+id/overlay_toggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="20dp"
        android:text="@string/overlay_toggle"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbarLayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/individual_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/overlay_toggle"
        tools:layout_editor_absoluteX="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/additionalholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewAdvancedToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:text="@string/advanced_toggle_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/collapseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:rotation="180"
                android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewAdvancedToggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewAdvancedToggle" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/individualholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textViewAdvancedToggle">

                <TextView
                    android:id="@+id/textViewCornerToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="12dp"
                    android:text="@string/individual_toggle_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/switchTopL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
                    android:padding="8dp"
                    android:text="Top Left"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCornerToggle" />

                <CheckBox
                    android:id="@+id/switchBottomL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
                    android:padding="8dp"
                    android:text="Bottom Left"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switchTopL" />

                <CheckBox
                    android:id="@+id/switchTopR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:padding="8dp"
                    android:text="Top Right"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCornerToggle" />

                <CheckBox
                    android:id="@+id/switchBottomR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:padding="8dp"
                    android:text="Bottom Right"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switchTopR" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/colorPreviewLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/individualholder"
                tools:layout_editor_absoluteX="16dp">

                <com.jaredrummler.android.colorpicker.ColorPanelView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/tagColorPreview"
                    android:layout_width="@dimen/cpv_color_preference_large"
                    android:layout_height="@dimen/cpv_color_preference_large"
                    app:cpv_colorShape="circle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tagColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/corner_color_string"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/tagColorPreview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!--<TextView
        android:id="@+id/nideNotifTutorialLaunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="HIDE NOTIFICATION"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        app:layout_constraintTop_toBottomOf="@+id/overlay_toggle" />-->

</androidx.constraintlayout.widget.ConstraintLayout>